--- a/EndOfLine/Firmware/Source/.settings/org.eclipse.core.resources.prefs
+++ b/EndOfLine/Firmware/Source/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,10 @@
 eclipse.preferences.version=1
 encoding//Core/core_riscv.c=GBK
+encoding//Debug/debug.c=GBK
+encoding//Debug/debug.h=GBK
 encoding//Peripheral/inc/ch32v20x.h=UTF-8
 encoding//Peripheral/inc/ch32v20x_gpio.h=GBK
+encoding//Peripheral/inc/ch32v20x_misc.h=GBK
 encoding//Peripheral/inc/ch32v20x_rcc.h=GBK
 encoding//Peripheral/src/ch32v20x_gpio.c=GBK
 encoding//Startup/startup_ch32v20x_D6.S=GBK
